cut unnecessary code, fixed home button alignment

--- a/style.css
+++ b/style.css
@@ -1,69 +1,4 @@
+/* put your custom css here. */
 /* ===================== TWO COLUMN SERVER LIST ========================= */
-div[class*="guildsWrapper-"]{width: 125px !important;}
-div[class*="guildsWrapper-"] div[class*="scrollerWrap-"] {width: 150px;}
-div[class*="guildsWrapper-"] div[class*="guilds-"] {
-    display: flex;
-    flex-flow: row wrap;
-    padding-left: 0;
-    align-content: flex-start;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guild-"] {
-    margin-left: 8px;
-    margin-top: 8px;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guild-"][class*="unread"]::before {
-    left: -2px;
-    top: 5px;
-    z-index:9000;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guild-"]:first-child {
-    position: relative; 
-    left: 0;
-    margin: auto;
-    margin-top: 15px;
-}
-
-#bd-pub-li {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-}
-
-#bd-pub-li #bd-pub-button {
-    position:absolute;
-    width: 100%;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guildSeparator-"] {
-  position: relative;
-    width: 100%;
-    margin-top: 10px;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="friendsOnline"] {
-  position: relative;
-    width: 100%;
-    margin: auto;
-    margin-top: 5px;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guild-"][class*="selected-"]::before {
-    display: none;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="guild-"] {
-  position: relative;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="dms-"] {
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-}
-
-div[class*="guildsWrapper-"] div[class*="guilds-"] div[class*="dms-"] div[class*="guild-"] {
-    left: 0;
-}
+div[class*="guildsWrapper-"]{width: 126px !important;}
+div[class*="guildsWrapper-"] div[class*="scrollerWrap-"] {width: 136px;}
